// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Route template should configure chunk name prefix 1`] = `
"function Foo() {
  return import(/* webpackChunkName: \\"page-foo\\" */ '@/assets/foo.md')
}
function Bar() {
  return import(/* webpackChunkName: \\"page-bar\\" */ '@/assets/bar.md')
}

export default [
  {
    name: 'foo',
    path: '/foo',
    component: Foo
  },
  {
    name: 'bar',
    path: '/bar',
    component: Bar
  }
]
"
`;

exports[`Route template should generate nested routes 1`] = `
"function Foo() {
  return import(/* webpackChunkName: \\"foo\\" */ '@/assets/foo.md')
}
function FooBar() {
  return import(/* webpackChunkName: \\"bar\\" */ '@/assets/bar.md')
}
function FooBaz() {
  return import(/* webpackChunkName: \\"baz\\" */ '@/assets/baz.md')
}

export default [
  {
    name: 'foo',
    path: '/foo',
    component: Foo,
    children: [
      {
        name: 'bar',
        path: 'bar',
        component: FooBar
      },
      {
        name: 'baz',
        path: 'baz',
        component: FooBaz
      }
    ]
  }
]
"
`;

exports[`Route template should generate route meta 1`] = `
"import Foo from '@/assets/foo.md'

export default [
  {
    name: 'foo',
    path: '/foo',
    component: Foo,
    meta: {
      title: 'Hello'
    }
  }
]
"
`;

exports[`Route template should generate routes 1`] = `
"function Foo() {
  return import(/* webpackChunkName: \\"foo\\" */ '@/assets/foo.md')
}
function Bar() {
  return import(/* webpackChunkName: \\"bar\\" */ '@/assets/bar.md')
}

export default [
  {
    name: 'foo',
    path: '/foo',
    component: Foo
  },
  {
    name: 'bar',
    path: '/bar',
    component: Bar
  }
]
"
`;

exports[`Route template should generate static import code 1`] = `
"import Foo from '@/assets/foo.md'
import Bar from '@/assets/bar.md'

export default [
  {
    name: 'foo',
    path: '/foo',
    component: Foo
  },
  {
    name: 'bar',
    path: '/bar',
    component: Bar
  }
]
"
`;

exports[`Route template should not include name if the route has a default child 1`] = `
"function Foo() {
  return import(/* webpackChunkName: \\"foo\\" */ '@/assets/foo.md')
}
function FooIndex() {
  return import(/* webpackChunkName: \\"foo-index\\" */ '@/pages/foo/index.md')
}

export default [
  {
    path: '/foo',
    component: Foo,
    children: [
      {
        name: 'foo-index',
        path: '',
        component: FooIndex
      }
    ]
  }
]
"
`;
